<resources>
    <string name="app_name">MyApplication</string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_in">LOG IN</string>
    <string name="todo">TODO</string>
    <string name="string_todo">string/todo</string>
    <string name="error_while_register">error_while_register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="error_while_login">error_while_login</string>
    <string name="back">Back</string>
    <string name="database_name">database_name</string>
    <string name="more_vert">more_vert</string>
    <string name="table_name">table_name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="user_name">User_name</string>
    <string name="log_out">LOG OUT</string>
    <string name="new_connection">New connection</string>
    <string name="exit">Exit</string>
    <string name="user">User</string>
    <string name="hostname">Hostname</string>
    <string name="prot">Prot</string>
    <string name="schema">Schema</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="subtitle">SubTitle</string>
    <string name="description">Description</string>
</resources>